[project]
name = "my-info-vw"
version = "0.1.0"
description = "AI-powered message fact-checker using multi-channel verification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langsmith>=0.7.17",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
